# secrets-frontend

./: .example.env  .gitignore  Makefile  README.md  docker-compose-prod.yml  docker-compose.yml  pyproject.toml  requirements.txt
app/: client.py  main.py  schemas.py
app/auth/: client.py  dependencies.py  exceptions.py  router.py  schemas.py
app/passwords/: client.py  dependencies.py  router.py  schemas.py
app/users/: router.py
docker/: docker-entrypoint.sh  fastapi.Dockerfile
secrets/: dependencies.py  main.py  templating.py
secrets/backend/: client.py
secrets/pages/: __init__.py  onboarding.py  passwords.py
secrets/schemes/: __init__.py
secrets/templates/: base.html  login.html  main.html  passwords.html  register.html
secrets_app/: client.py  main.py
secrets_app/auth/: client.py  dependencies.py  exceptions.py  router.py  schemas.py
secrets_app/passwords/: client.py  dependencies.py  router.py  schemas.py
secrets_app/users/: router.py
src/: main.py
src/pages/: onboarding.py  passwords.py
src/templates/: 2fa.html  base.html  login.html  main.html  password.html  passwords.html  register.html
static/components/: styles.css
static/css/: base.css  onboarding.css
static/js/: base.js
templates/: base.html  main.html
templates/auth/: 2fa.html  login.html  onboarding.html  register.html  registration.html
templates/passwords/: add.html  creation.html  edit.html  editing.html  page.html  pagination.html  searching_results.html  view.html
templates/users/: me.html  view.html
tg/: auth.js  index.html  styles.css
(+62 files in other folders)
